--- a/index.html
+++ b/index.html
@@ -9,5 +9,13 @@
 </head>
 <body>
     <h1>Practica 1</h1>
+    <div class="container">
+        <div class="item">1</div>
+        <div class="item">2</div>
+        <div class="item">3</div>
+        <div class="item">4</div>
+        <div class="item">5</div>
+        <div class="item">6</div>
+    </div>
 </body>
 </html>
