--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    <h1>Practica 1</h1>
+    <h1>Practice 1</h1>
     <div class="container">
         <div class="item">1</div>
         <div class="item">2</div>
