--- a/index.html
+++ b/index.html
@@ -8,27 +8,64 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    <h1>Practice 2</h1>
-    <section class="container">
-        <article class="item">1</article>
-        <article class="item">2</article>
-        <article class="item">3</article>
-        <article class="item">4</article>
-        <article class="item">5</article>
-        <article class="item">6</article>
-        <article class="item">7</article>
-        <article class="item">8</article>
-        <article class="item">9</article>
-        <article class="item">10</article>
-        <article class="item">11</article>
-        <article class="item">12</article>
-        <article class="item">13</article>
-        <article class="item">14</article>
-        <article class="item">15</article>
-        <article class="item">16</article>
-        <article class="item">17</article>
-        <article class="item">18</article>
-        <article class="item">19</article>
-    </section>
+    <h1>Practice 3</h1>
+    <div class="content">
+        <main class="main">
+            <h1>Contenido</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque ut reprehenderit doloribus temporibus fugit quibusdam assumenda nostrum alias provident ratione, possimus animi inventore voluptate sunt reiciendis harum ipsam molestiae architecto?
+            Doloremque quo corporis eligendi quisquam voluptas, quidem officiis eius maxime, explicabo perferendis asperiores harum eveniet repudiandae consequuntur consequatur fugiat minima ex ut inventore, est temporibus molestias illo. Totam, nobis corporis.
+            Sapiente porro aspernatur rerum et error delectus, sunt ad accusamus possimus magni doloremque nisi totam nobis architecto perspiciatis at. Veritatis distinctio quaerat voluptates quisquam saepe odit nostrum sequi similique harum!
+            Beatae libero voluptatibus saepe inventore laudantium. Doloremque totam obcaecati dignissimos, laboriosam quas deserunt non, culpa fugiat consequatur voluptatem, in laudantium veniam? Delectus, fugit harum? Aperiam velit atque voluptatem non magni.
+            Quis, temporibus. Aperiam dolores, hic illo pariatur incidunt ad voluptatem nostrum laboriosam sapiente distinctio tempore quidem ex consequuntur necessitatibus mollitia quasi laborum obcaecati omnis. Non laboriosam deleniti praesentium vero! Consectetur.
+            Accusamus voluptatibus dolorem consectetur nesciunt recusandae, maiores in ad iste facilis id. Qui tempore, voluptatum eligendi hic et consequuntur perferendis iusto nobis ex distinctio omnis expedita similique magni facilis commodi!
+            Laboriosam quasi impedit ex harum, soluta quaerat possimus dolorem architecto, dignissimos similique minus vel, vero labore incidunt eligendi saepe repellendus sapiente aliquam rem aperiam eos nihil error. Illum, illo natus.
+            Nisi dolores est, nostrum vitae soluta quasi, ipsum, possimus ipsam modi dignissimos cum? Voluptas error excepturi, eos a molestiae libero dolorem, porro magni obcaecati fugit, omnis corrupti quia. Corporis, veniam?
+            Iste maiores magni repudiandae, eaque delectus fugiat ab cupiditate fugit illum dolore eius dolorem debitis voluptatem sunt incidunt, neque nulla perspiciatis quis animi aut autem ut? Doloremque necessitatibus similique alias.
+            Praesentium ad et rerum hic nemo? In, facere rerum. Consequuntur sunt similique neque minima dolor voluptates aperiam itaque possimus molestiae, totam autem praesentium facilis harum ratione sapiente cum dolores architecto.
+            Sunt quisquam commodi error illo quia illum enim! Ab facere iste sint consequuntur ullam molestias quam, corrupti assumenda officia est deleniti sequi obcaecati incidunt quo deserunt necessitatibus. Sunt, consequatur earum.
+            Odio obcaecati magnam, voluptatibus vitae quidem animi architecto fugit laboriosam ipsum facilis consequatur explicabo error facere dolore corporis sunt eveniet reprehenderit pariatur consectetur optio? Beatae eos nisi laborum enim molestiae?
+            Et aliquid labore dolorum porro nobis doloribus rerum, consectetur dolores inventore, a sequi fuga quisquam molestias sit. Iure id commodi veniam, sequi praesentium consequatur laborum, voluptatum nobis rerum necessitatibus mollitia!
+            Accusantium voluptates maiores, porro doloremque sed molestiae, odit possimus impedit provident voluptatem labore dolorem dolore quibusdam asperiores ratione! Quidem adipisci nam commodi laudantium dolorum inventore facere minima rem incidunt sapiente?
+            Officiis perferendis quis facere quibusdam ab consequuntur at itaque deserunt eaque corrupti ea recusandae accusamus odit suscipit consequatur cupiditate accusantium deleniti tempora nesciunt, officia quo quia molestiae minus. Libero, quis.
+            Minus quaerat laboriosam dolore voluptate explicabo fugit placeat unde dicta nihil necessitatibus hic temporibus, similique odio eum. At explicabo libero vitae, quibusdam esse, autem voluptatum expedita placeat quis accusantium amet.
+            Quo quidem eum quis quibusdam ducimus harum odio quia omnis blanditiis officiis sunt obcaecati in corporis sed, dolores tempora quasi facere dolore exercitationem earum. Tempore non officia debitis nisi ducimus.
+            Corrupti cum doloribus perferendis adipisci velit at maxime, architecto, voluptas eaque eveniet ipsum deserunt recusandae deleniti exercitationem molestiae reiciendis repellat asperiores doloremque dolor molestias expedita labore, totam vero mollitia? Doloremque.
+            Voluptatibus quaerat, consequuntur hic expedita incidunt eligendi minus minima impedit reiciendis odit porro error nisi cum beatae dolorum sint neque ratione pariatur nam quisquam reprehenderit aliquid adipisci vero ducimus. Eligendi.
+            Sed, non. Culpa, veritatis, quisquam nulla cumque ab perspiciatis distinctio minima excepturi quia dolores, harum explicabo consequatur esse. Quisquam iure dolores ullam fugiat. Nesciunt assumenda quod, adipisci blanditiis incidunt quis!
+            Quidem sint officiis quisquam nesciunt voluptatum? Vitae molestias reprehenderit dicta facere perferendis beatae porro laborum earum reiciendis optio, possimus dolorem fugit quidem harum nemo laboriosam eveniet exercitationem maxime quia. Ea.
+            Quaerat illo rem incidunt deserunt soluta voluptatem vitae qui placeat ea ad eaque, a repellendus earum dolores aperiam eius amet optio omnis quasi aspernatur alias autem suscipit neque est. Sunt!
+            Tenetur atque soluta hic maiores, pariatur officia ipsum quas esse, similique repellendus, nulla nesciunt amet fugit blanditiis odit animi! Possimus libero asperiores nobis, officia illum excepturi deserunt soluta nemo fugiat.
+            Possimus porro quam quibusdam autem nostrum voluptates, libero vitae non quaerat quas, maiores amet numquam odio a quia suscipit voluptate, saepe nesciunt laborum eos. Mollitia architecto rerum voluptatem voluptate esse!
+            Libero magni autem consequatur delectus ipsum eaque cupiditate facere perspiciatis nisi at provident soluta, reprehenderit necessitatibus voluptates quae ducimus repudiandae cumque saepe exercitationem recusandae voluptatibus! Cum corporis sed delectus dicta?
+            Cum harum saepe ullam sint maiores sequi, sapiente omnis quaerat error fugit illum repudiandae excepturi odio dolores libero! Odit hic blanditiis corporis quidem consequatur molestias fugiat eos placeat earum illum!
+            Nam fuga ipsa doloribus aliquam totam magni in, corporis nulla esse et, iure non sit facere libero fugiat! Repudiandae praesentium nesciunt inventore reprehenderit officia odio, culpa nulla corporis ad assumenda.
+            Quasi adipisci accusantium non labore, numquam velit deleniti accusamus repellendus ut rem possimus. Deleniti, optio dolores! Doloremque modi maxime voluptatum voluptate? Laboriosam suscipit deserunt quod tenetur saepe consequuntur quidem nihil.
+            Nam sit voluptatum eum doloremque animi iste qui enim. Similique repellat incidunt in ut esse voluptatibus nihil, voluptatem odit placeat provident necessitatibus cupiditate dolore hic ad neque, numquam illum nobis.
+            Accusantium reprehenderit dignissimos nostrum, ipsum magni minus aperiam. Reprehenderit ullam neque dolorem culpa, accusantium minima sequi excepturi praesentium rerum ab aut quasi voluptatem corporis dolor molestiae aspernatur vel vitae tempora.
+            Maiores veniam quae magni vero repellat reiciendis nam, aliquam quod excepturi voluptatum ex id, maxime hic dolores qui ad exercitationem at adipisci unde tempore aliquid quisquam fugit? Nulla, culpa ducimus?
+            Expedita nam optio reiciendis sint temporibus sed harum deserunt neque id eos ipsa provident, laboriosam officiis maiores consequatur unde rem quis vero nemo repellendus. Accusantium commodi non asperiores ipsa voluptate!
+            Odio neque consectetur eos, error facere necessitatibus ab labore aliquid unde eaque natus quaerat dolores minima iusto nostrum rerum optio ad quisquam? Tempora est accusantium ut, ad rem ullam amet.
+            Deleniti, fugit, rem id laboriosam commodi natus, exercitationem quas sint quia ex consequatur provident libero enim earum repudiandae eum tempore eos! Dolores amet corporis delectus molestiae eius ratione, ipsam minima!
+            Nisi necessitatibus id esse eum iure magni error officia vitae tempora, repellendus molestiae. Delectus quas reiciendis ab impedit veniam odio unde aspernatur eum, quisquam debitis laborum, officia dolorum nisi. Voluptas.
+            Fuga quae quod laboriosam natus deserunt perferendis, voluptatum deleniti dolor perspiciatis. Modi maiores a, alias natus beatae quaerat nostrum non magnam debitis error perferendis eligendi in, tempora, blanditiis et quod?
+            Pariatur, nam magni id veniam asperiores, natus modi nihil nemo perspiciatis vel et tempora cum tempore facere deleniti provident ex, molestias tenetur dignissimos vero veritatis esse. Excepturi qui ipsum minus?
+            Exercitationem et sapiente ad suscipit ipsum laudantium dolor consequuntur excepturi hic nihil facere necessitatibus incidunt nulla officia asperiores porro reiciendis in aliquid fugit, iste alias repellendus dolore. Consequuntur, nemo ad.
+            Ipsam odio est perferendis aperiam quam laborum maxime assumenda temporibus cumque officiis incidunt dicta inventore ipsum hic impedit reiciendis quidem voluptas eius, a ullam rerum quis esse magnam dolore. Veniam?
+            Alias, minus reprehenderit velit ea sapiente distinctio tenetur expedita error enim cumque vitae vero impedit a aliquam eum nam tempora veniam ad recusandae doloribus accusantium quas? Odio consectetur necessitatibus temporibus?
+            Esse deleniti dolorum eveniet obcaecati tempore accusamus dolorem et aperiam nesciunt necessitatibus veritatis doloribus placeat consequatur fugiat dolor, asperiores amet accusantium delectus impedit rerum illo? Accusamus fuga sint facere quia.
+            Dolores possimus, excepturi recusandae quas quam voluptatum ex quisquam explicabo, eos praesentium expedita, est rem ratione harum architecto earum laborum. Vel nam ex reiciendis aperiam, vitae praesentium molestiae culpa quo!
+            Id modi numquam fuga quaerat amet quisquam similique ipsum qui culpa dolore. Quo accusamus maiores deleniti voluptatibus recusandae beatae corporis blanditiis, nostrum voluptas voluptates. Dicta pariatur laborum quas optio laudantium!
+            Odit explicabo ducimus iure optio nesciunt maiores nostrum, ex, et aspernatur fugit animi, commodi cumque! Itaque quae sapiente non in repellendus enim temporibus ut minus modi error. Maxime, alias ducimus.
+            Facilis asperiores ea, doloribus omnis labore excepturi? Unde voluptatum ratione voluptatibus illo maxime fuga molestiae quidem dicta? Unde qui provident odio accusamus architecto, excepturi autem neque expedita suscipit sequi esse?
+            Nihil dolor reprehenderit officia officiis veritatis accusantium nemo deserunt libero doloribus optio, ab quas assumenda harum eos fuga laboriosam placeat autem tempora praesentium. Sapiente, voluptatum. Ipsam saepe ipsum dolor quis.
+            Rem debitis dolores atque eaque esse? A maxime soluta quia, praesentium veritatis officiis rerum sunt incidunt ipsum minima obcaecati vitae facilis atque, voluptatum repudiandae. Hic natus debitis corrupti necessitatibus deleniti.
+            Laudantium quo quasi ullam, adipisci iure voluptatem enim voluptate cum nihil! Voluptates dolorum adipisci quae maxime natus architecto. Molestias reiciendis accusantium, vel provident sapiente quia eius aliquam sint porro officiis?
+            Voluptatibus sed obcaecati minus exercitationem reiciendis delectus dolore, dolorem cumque quam harum maxime sunt tenetur odit, quasi voluptates sequi, ab minima dolores explicabo tempora deleniti ipsam! Tenetur facere facilis voluptate.
+            Accusantium possimus fugit minima, quae ullam saepe quas quod eveniet suscipit ex quibusdam repellendus consequatur. Rem molestiae velit eligendi reiciendis magni, architecto consectetur fugit omnis nobis nemo dolorum ipsum corporis?</p>
+        </main>
+        <aside class="aside">
+            <h1>Índice</h1>
+        </aside>
+    </div>
 </body>
 </html>
