practice 6 - split layout

--- a/index.html
+++ b/index.html
@@ -8,22 +8,33 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    <h1 class="page-title">Practice 5 - Slider animado</h1>
-    <div class="slider">
-        <div class="slider__content">
-            <div class="slider__item">
-                <img class="slider__img" src="https://imgur.com/BV55BwZ.jpg" alt="Landscape 1">
-                <p class="slider__caption">I'm an awesome caption</p>
-            </div>
-            <div class="slider__item">
-                <img class="slider__img" src="https://imgur.com/9X1yw3M.jpg" alt="Landscape 2">
-                <p class="slider__caption">I'm an awesome caption too!</p>
-            </div>
-            <div class="slider__item">
-                <img class="slider__img" src="https://imgur.com/4sJfvuo.jpg" alt="Landscape 3">
-                <p class="slider__caption">I'm an awesome caption</p>
-            </div>
-        </div>
-    </div>
+    <article class="wrapper">
+        <section class="split">
+            <aside class="split-block">
+                <div class="image split-item">
+                    <img src="assets/img/stock5.jpg" alt="">
+                </div>
+                <div class="flex-container split-item">
+                    <h3 class="title">Split layout con flexbox</h3>
+                    <div class="text">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam sed quam autem officiis ipsum, consectetur numquam itaque ea excepturi amet.</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit eius odit culpa fuga optio harum nisi accusamus laudantium rem modi.</p>
+                    </div>
+                </div>
+            </aside>
+            <aside class="split-block">
+                    <div class="image split-item">
+                        <img src="assets/img/stock4.jpg" alt="">
+                    </div>
+                    <div class="flex-container split-item">
+                        <h3 class="title">Split layout con flexbox</h3>
+                        <div class="text">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam sed quam autem officiis ipsum, consectetur numquam itaque ea excepturi amet.</p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit eius odit culpa fuga optio harum nisi accusamus laudantium rem modi.</p>
+                        </div>
+                    </div>
+                </aside>
+        </section>
+    </article>
 </body>
 </html>
