readme.md of practice 6 added

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <section class="split">
             <aside class="split-block">
                 <div class="image split-item">
-                    <img src="assets/img/stock5.jpg" alt="">
+                    <img src="http://lorempixel.com/400/600/sports/" alt="">
                 </div>
                 <div class="flex-container split-item">
                     <h3 class="title">Split layout con flexbox</h3>
@@ -24,7 +24,7 @@
             </aside>
             <aside class="split-block">
                     <div class="image split-item">
-                        <img src="assets/img/stock4.jpg" alt="">
+                        <img src="http://lorempixel.com/400/600/sports/" alt="">
                     </div>
                     <div class="flex-container split-item">
                         <h3 class="title">Split layout con flexbox</h3>
