--- a/index.html
+++ b/index.html
@@ -7,23 +7,53 @@
     <title>Flexbox</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
-<body class="app">
-    <header class="app__header">
-        <h2 class="app__title">Fixed header with flexbox</h2>
-    </header>
-    <main class="app__main">
-        <p class="app__text">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima tempore vitae quo, iste voluptas enim fuga ipsum quas incidunt aut architecto facilis voluptate, obcaecati maxime, ratione quibusdam! Quae corporis, quasi eaque suscipit officiis repellat fuga officia alias recusandae corrupti maxime quaerat quis soluta! Ea, blanditiis accusamus! Eum, impedit numquam molestias deleniti nisi rerum atque consequatur? Esse laborum porro quia voluptate magnam, temporibus quae ea pariatur laudantium officiis praesentium nemo corrupti veritatis ipsa repellendus eos quod dolorem nostrum numquam. Sint doloribus aut, consectetur odit ipsum error sunt iste? Repellat enim quas impedit. Nam vitae officiis aliquam accusantium libero. Vitae rem vero necessitatibus nostrum consequuntur tempora eum natus officiis dignissimos ipsa accusantium, facere dolore corporis blanditiis cupiditate recusandae totam autem doloribus eius enim voluptatibus officia voluptates illum placeat? Eaque harum odio nesciunt, amet natus quia impedit, illum quod sit laborum corrupti est ad vel, fugiat voluptas numquam. Provident at dolor omnis quasi commodi ea ad, atque nemo ex? Dolorum nostrum temporibus, at enim, cupiditate quia soluta quaerat repellendus mollitia, repellat molestias assumenda voluptatem quisquam. Maxime ex aspernatur exercitationem accusamus dolorem ipsum beatae ea quo labore rem, assumenda suscipit quasi praesentium, tenetur magnam facere architecto, quibusdam veritatis molestias maiores in? Quia, laborum ex.
-        </p>
-        <p class="app__text">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima tempore vitae quo, iste voluptas enim fuga ipsum quas incidunt aut architecto facilis voluptate, obcaecati maxime, ratione quibusdam! Quae corporis, quasi eaque suscipit officiis repellat fuga officia alias recusandae corrupti maxime quaerat quis soluta! Ea, blanditiis accusamus! Eum, impedit numquam molestias deleniti nisi rerum atque consequatur? Esse laborum porro quia voluptate magnam, temporibus quae ea pariatur laudantium officiis praesentium nemo corrupti veritatis ipsa repellendus eos quod dolorem nostrum numquam. Sint doloribus aut, consectetur odit ipsum error sunt iste? Repellat enim quas impedit. Nam vitae officiis aliquam accusantium libero. Vitae rem vero necessitatibus nostrum consequuntur tempora eum natus officiis dignissimos ipsa accusantium, facere dolore corporis blanditiis cupiditate recusandae totam autem doloribus eius enim voluptatibus officia voluptates illum placeat? Eaque harum odio nesciunt, amet natus quia impedit, illum quod sit laborum corrupti est ad vel, fugiat voluptas numquam. Provident at dolor omnis quasi commodi ea ad, atque nemo ex? Dolorum nostrum temporibus, at enim, cupiditate quia soluta quaerat repellendus mollitia, repellat molestias assumenda voluptatem quisquam. Maxime ex aspernatur exercitationem accusamus dolorem ipsum beatae ea quo labore rem, assumenda suscipit quasi praesentium, tenetur magnam facere architecto, quibusdam veritatis molestias maiores in? Quia, laborum ex.
-        </p>
-        <p class="app__text">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima tempore vitae quo, iste voluptas enim fuga ipsum quas incidunt aut architecto facilis voluptate, obcaecati maxime, ratione quibusdam! Quae corporis, quasi eaque suscipit officiis repellat fuga officia alias recusandae corrupti maxime quaerat quis soluta! Ea, blanditiis accusamus! Eum, impedit numquam molestias deleniti nisi rerum atque consequatur? Esse laborum porro quia voluptate magnam, temporibus quae ea pariatur laudantium officiis praesentium nemo corrupti veritatis ipsa repellendus eos quod dolorem nostrum numquam. Sint doloribus aut, consectetur odit ipsum error sunt iste? Repellat enim quas impedit. Nam vitae officiis aliquam accusantium libero. Vitae rem vero necessitatibus nostrum consequuntur tempora eum natus officiis dignissimos ipsa accusantium, facere dolore corporis blanditiis cupiditate recusandae totam autem doloribus eius enim voluptatibus officia voluptates illum placeat? Eaque harum odio nesciunt, amet natus quia impedit, illum quod sit laborum corrupti est ad vel, fugiat voluptas numquam. Provident at dolor omnis quasi commodi ea ad, atque nemo ex? Dolorum nostrum temporibus, at enim, cupiditate quia soluta quaerat repellendus mollitia, repellat molestias assumenda voluptatem quisquam. Maxime ex aspernatur exercitationem accusamus dolorem ipsum beatae ea quo labore rem, assumenda suscipit quasi praesentium, tenetur magnam facere architecto, quibusdam veritatis molestias maiores in? Quia, laborum ex.
-        </p>
-    </main>
-    <footer class="app__footer">
-        <h2 class="app__title">Fixed footer with flexbox</h2>
-    </footer>
+<body>
+    <div class="grid-container">
+        <div class="grid-item">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem accusamus, incidunt repellendus impedit nesciunt sequi aperiam! Aliquid autem vitae aperiam velit optio alias quas harum, itaque, nisi temporibus maiores sapiente corrupti dolorum nesciunt
+        a id illo quos. Alias non veniam molestias, eum amet error. Ipsa ducimus error repudiandae aliquid eos natus dolorem assumenda amet ad, provident nesciunt ipsum fuga ipsam nostrum molestias placeat quas perferendis unde, quae voluptate possimus repellat
+        nam cumque. Repudiandae ex atque id consequatur, voluptas modi et eum non debitis accusantium mollitia tempora illo porro quam vel necessitatibus error explicabo reiciendis veritatis aut obcaecati natus aliquam voluptatibus!
+        </div>
+        <div class="grid-item">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem accusamus, incidunt repellendus impedit nesciunt sequi aperiam! Aliquid autem vitae aperiam velit optio alias quas harum, itaque, nisi temporibus maiores sapiente corrupti dolorum nesciunt
+        a id illo quos. Alias non veniam molestias, eum amet error. Ipsa ducimus error repudiandae aliquid eos natus dolorem assumenda amet ad, provident nesciunt ipsum fuga ipsam nostrum molestias placeat quas perferendis unde, quae voluptate possimus repellat
+        nam cumque. Repudiandae ex atque id consequatur, voluptas modi et eum non debitis accusantium mollitia tempora illo porro quam vel necessitatibus error explicabo reiciendis veritatis aut obcaecati natus aliquam voluptatibus!
+        </div>
+        <div class="grid-item">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem accusamus, incidunt repellendus impedit nesciunt sequi aperiam! Aliquid autem vitae aperiam velit optio alias quas harum, itaque, nisi temporibus maiores sapiente corrupti dolorum nesciunt
+        a id illo quos. Alias non veniam molestias, eum amet error. Ipsa ducimus error repudiandae aliquid eos natus dolorem assumenda amet ad, provident nesciunt ipsum fuga ipsam nostrum molestias placeat quas perferendis unde, quae voluptate possimus repellat
+        nam cumque. Repudiandae ex atque id consequatur, voluptas modi et eum non debitis accusantium mollitia tempora illo porro quam vel necessitatibus error explicabo reiciendis veritatis aut obcaecati natus aliquam voluptatibus!
+        </div>
+        <div class="grid-item">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem accusamus, incidunt repellendus impedit nesciunt sequi aperiam! Aliquid autem vitae aperiam velit optio alias quas harum, itaque, nisi temporibus maiores sapiente corrupti dolorum nesciunt
+        a id illo quos. Alias non veniam molestias, eum amet error. Ipsa ducimus error repudiandae aliquid eos natus dolorem assumenda amet ad, provident nesciunt ipsum fuga ipsam nostrum molestias placeat quas perferendis unde, quae voluptate possimus repellat
+        nam cumque. Repudiandae ex atque id consequatur, voluptas modi et eum non debitis accusantium mollitia tempora illo porro quam vel necessitatibus error explicabo reiciendis veritatis aut obcaecati natus aliquam voluptatibus!
+        </div>
+        <div class="grid-item">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem accusamus, incidunt repellendus impedit nesciunt sequi aperiam! Aliquid autem vitae aperiam velit optio alias quas harum, itaque, nisi temporibus maiores sapiente corrupti dolorum nesciunt
+        a id illo quos. Alias non veniam molestias, eum amet error. Ipsa ducimus error repudiandae aliquid eos natus dolorem assumenda amet ad, provident nesciunt ipsum fuga ipsam nostrum molestias placeat quas perferendis unde, quae voluptate possimus repellat
+        nam cumque. Repudiandae ex atque id consequatur, voluptas modi et eum non debitis accusantium mollitia tempora illo porro quam vel necessitatibus error explicabo reiciendis veritatis aut obcaecati natus aliquam voluptatibus!
+        </div>
+        <div class="grid-item">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem accusamus, incidunt repellendus impedit nesciunt sequi aperiam! Aliquid autem vitae aperiam velit optio alias quas harum, itaque, nisi temporibus maiores sapiente corrupti dolorum nesciunt
+        a id illo quos. Alias non veniam molestias, eum amet error. Ipsa ducimus error repudiandae aliquid eos natus dolorem assumenda amet ad, provident nesciunt ipsum fuga ipsam nostrum molestias placeat quas perferendis unde, quae voluptate possimus repellat
+        nam cumque. Repudiandae ex atque id consequatur, voluptas modi et eum non debitis accusantium mollitia tempora illo porro quam vel necessitatibus error explicabo reiciendis veritatis aut obcaecati natus aliquam voluptatibus!
+        </div>
+        <div class="grid-item">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem accusamus, incidunt repellendus impedit nesciunt sequi aperiam! Aliquid autem vitae aperiam velit optio alias quas harum, itaque, nisi temporibus maiores sapiente corrupti dolorum nesciunt
+        a id illo quos. Alias non veniam molestias, eum amet error. Ipsa ducimus error repudiandae aliquid eos natus dolorem assumenda amet ad, provident nesciunt ipsum fuga ipsam nostrum molestias placeat quas perferendis unde, quae voluptate possimus repellat
+        nam cumque. Repudiandae ex atque id consequatur, voluptas modi et eum non debitis accusantium mollitia tempora illo porro quam vel necessitatibus error explicabo reiciendis veritatis aut obcaecati natus aliquam voluptatibus!
+        </div>
+        <div class="grid-item">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem accusamus, incidunt repellendus impedit nesciunt sequi aperiam! Aliquid autem vitae aperiam velit optio alias quas harum, itaque, nisi temporibus maiores sapiente corrupti dolorum nesciunt
+        a id illo quos. Alias non veniam molestias, eum amet error. Ipsa ducimus error repudiandae aliquid eos natus dolorem assumenda amet ad, provident nesciunt ipsum fuga ipsam nostrum molestias placeat quas perferendis unde, quae voluptate possimus repellat
+        nam cumque. Repudiandae ex atque id consequatur, voluptas modi et eum non debitis accusantium mollitia tempora illo porro quam vel necessitatibus error explicabo reiciendis veritatis aut obcaecati natus aliquam voluptatibus!
+        </div>
+        <div class="grid-item">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem accusamus, incidunt repellendus impedit nesciunt sequi aperiam! Aliquid autem vitae aperiam velit optio alias quas harum, itaque, nisi temporibus maiores sapiente corrupti dolorum nesciunt
+        a id illo quos. Alias non veniam molestias, eum amet error. Ipsa ducimus error repudiandae aliquid eos natus dolorem assumenda amet ad, provident nesciunt ipsum fuga ipsam nostrum molestias placeat quas perferendis unde, quae voluptate possimus repellat
+        nam cumque. Repudiandae ex atque id consequatur, voluptas modi et eum non debitis accusantium mollitia tempora illo porro quam vel necessitatibus error explicabo reiciendis veritatis aut obcaecati natus aliquam voluptatibus!
+        </div>   
+    </div>
 </body>
 </html>
