--- a/index.html
+++ b/index.html
@@ -8,39 +8,22 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    <div class="banner">
-        <div class="banner__content">
-            <div class="banner__first">
-                <div class="banner__data">
-                    <div class="banner__presentation">
-                        <p class="banner__subtitle">FIFA World Cup</p>
-                        <h2 class="banner__title">Russia 2018</h2>
-                        <p class="banner__subtitle">Today matches</p>
-                    </div>
-                    <div class="banner__next-courses">
-                        <a href="#" class="button">Germany vs Mexico
-                            <span class="icon-date space">
-                                10:00 a.m.
-                            </span>
-                        </a>
-                        <a href="#" class="button">Portugal vs Spain
-                            <span class="icon-date space">
-                                01:00 p.m.
-                            </span>
-                        </a>
-                        <a href="#" class="button">View all matches
-                            <span class="icon-date space"></span>
-                        </a>
-                    </div>
-                </div>
+    <h2 class="title">Same height in column containers</h2>
+    <article class="row">
+        <section class="col">
+            <div class="text">
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia odio nihil incidunt laboriosam quaerat non amet blanditiis tenetur cupiditate? Exercitationem delectus ducimus suscipit officia dolor, facilis molestias distinctio quibusdam, qui beatae non recusandae quod magni sit consequatur omnis quas, ipsum necessitatibus quos. Voluptates, mollitia odit saepe aut voluptatibus placeat fuga!
+                </p>
             </div>
-            <div class="banner__second">
-                <div class="banner__img">
-                    <img src="http://pluspng.com/img-png/logo-fifa-world-cup-2018-png-ih0-redbubble-net-image-144004343-2754-sticker-375x360-u4-png-375.png" alt="">
-                </div>
-                <!-- <img src="https://www.google.com.mx/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&cad=rja&uact=8&ved=2ahUKEwjLm7qgkZbaAhUL02MKHQBQDiAQjRx6BAgAEAU&url=http%3A%2F%2Fpluspng.com%2Flogo-fifa-world-cup-2018-png-1765.html&psig=AOvVaw2GZD6kiTIc7ZlBxquMjMfx&ust=1522571034017387" alt="" class="banner__img"> -->
+        </section>
+        <section class="col">
+            <div class="text">
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero natus dolor at optio explicabo ad. Quo sunt cupiditate nemo dolorum!
+                </p>
             </div>
-        </div>
-    </div>
+        </section>
+    </article>
 </body>
 </html>
