Practice 15 | Pricing table

--- a/index.html
+++ b/index.html
@@ -8,22 +8,83 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    <h2 class="title">Same height in column containers</h2>
-    <article class="row">
-        <section class="col">
-            <div class="text">
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia odio nihil incidunt laboriosam quaerat non amet blanditiis tenetur cupiditate? Exercitationem delectus ducimus suscipit officia dolor, facilis molestias distinctio quibusdam, qui beatae non recusandae quod magni sit consequatur omnis quas, ipsum necessitatibus quos. Voluptates, mollitia odit saepe aut voluptatibus placeat fuga!
-                </p>
+   <div class="pricing-table-container">
+       <article class="pricing-table">
+           <header class="pricing-table__header">
+               <div class="pricing-table__title">Basic</div>
+               <div class="pricing-table__price">0</div>
+           </header>
+           <div class="pricing-table__features-container">
+                <ul class="pricing-table__features">
+                    <li class="pricing-table__feature">Ilimited users</li>
+                    <li class="pricing-table__feature">Support 24/7</li>
+                    <li class="pricing-table__feature">Feedback</li>
+                    <li class="pricing-table__feature">Attention calls</li>
+                    <li class="pricing-table__feature">Custom service</li>
+                    <li class="pricing-table__feature">Great brand with</li>
+                </ul>
+           </div>
+           <footer class="pricing-table__footer">
+               <a href="#" class="pricing-table__button button">Buy</a>
+           </footer>
+       </article>
+       <article class="pricing-table">
+            <header class="pricing-table__header">
+                <div class="pricing-table__title">Standar</div>
+                <div class="pricing-table__price">10</div>
+            </header>
+            <div class="pricing-table__features-container">
+                 <ul class="pricing-table__features">
+                     <li class="pricing-table__feature">Ilimited users</li>
+                     <li class="pricing-table__feature">Support 24/7</li>
+                     <li class="pricing-table__feature">Feedback</li>
+                     <li class="pricing-table__feature">Attention calls</li>
+                     <li class="pricing-table__feature">Custom service</li>
+                     <li class="pricing-table__feature">Great brand with</li>
+                 </ul>
             </div>
-        </section>
-        <section class="col">
-            <div class="text">
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero natus dolor at optio explicabo ad. Quo sunt cupiditate nemo dolorum!
-                </p>
+            <footer class="pricing-table__footer">
+                <a href="#" class="pricing-table__button button">Buy</a>
+            </footer>
+        </article>
+        <article class="pricing-table">
+            <header class="pricing-table__header">
+                <div class="pricing-table__title">Pro</div>
+                <div class="pricing-table__price">20</div>
+            </header>
+            <div class="pricing-table__features-container">
+                    <ul class="pricing-table__features">
+                        <li class="pricing-table__feature">Ilimited users</li>
+                        <li class="pricing-table__feature">Support 24/7</li>
+                        <li class="pricing-table__feature">Feedback</li>
+                        <li class="pricing-table__feature">Attention calls</li>
+                        <li class="pricing-table__feature">Custom service</li>
+                        <li class="pricing-table__feature">Great brand with</li>
+                    </ul>
             </div>
-        </section>
-    </article>
+            <footer class="pricing-table__footer">
+                <a href="#" class="pricing-table__button button">Buy</a>
+            </footer>
+        </article>
+        <article class="pricing-table">
+            <header class="pricing-table__header">
+                <div class="pricing-table__title">Enterprise</div>
+                <div class="pricing-table__price">50</div>
+            </header>
+            <div class="pricing-table__features-container">
+                    <ul class="pricing-table__features">
+                        <li class="pricing-table__feature">Ilimited users</li>
+                        <li class="pricing-table__feature">Support 24/7</li>
+                        <li class="pricing-table__feature">Feedback</li>
+                        <li class="pricing-table__feature">Attention calls</li>
+                        <li class="pricing-table__feature">Custom service</li>
+                        <li class="pricing-table__feature">Great brand with</li>
+                    </ul>
+            </div>
+            <footer class="pricing-table__footer">
+                <a href="#" class="pricing-table__button button">Buy</a>
+            </footer>
+        </article>
+   </div>
 </body>
 </html>
