--- a/index.html
+++ b/index.html
@@ -1,59 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Flexbox</title>
+    <title>CSS Grid</title>
     <link rel="stylesheet" href="assets/css/style.css">
-    <script defer src="https://use.fontawesome.com/releases/v5.0.9/js/all.js" integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pGIl" crossorigin="anonymous"></script>
 </head>
+
 <body>
-    <div class="calendar">
-        <div class="calendar__header">
-            <div class="calendar__month">June</div>
-            <div class="calendar__week">
-                <div class="calendar__day calendar__item">S</div>
-                <div class="calendar__day calendar__item">M</div>
-                <div class="calendar__day calendar__item">T</div>
-                <div class="calendar__day calendar__item">W</div>
-                <div class="calendar__day calendar__item">T</div>
-                <div class="calendar__day calendar__item">F</div>
-                <div class="calendar__day calendar__item">S</div>
-            </div>
-        </div>
-        <div class="calendar__dates">
-            <div class="calendar__date calendar__item">1</div>
-            <div class="calendar__date calendar__item">2</div>
-            <div class="calendar__date calendar__item">3</div>
-            <div class="calendar__date calendar__item">4</div>
-            <div class="calendar__date calendar__item">5</div>
-            <div class="calendar__date calendar__item">6</div>
-            <div class="calendar__date calendar__item">7</div>
-            <div class="calendar__date calendar__item">8</div>
-            <div class="calendar__date calendar__item">9</div>
-            <div class="calendar__date calendar__item">10</div>
-            <div class="calendar__date calendar__item">11</div>
-            <div class="calendar__date calendar__item">12</div>
-            <div class="calendar__date calendar__item">13</div>
-            <div class="calendar__date calendar__item">14</div>
-            <div class="calendar__date calendar__item">15</div>
-            <div class="calendar__date calendar__item">16</div>
-            <div class="calendar__date calendar__item">17</div>
-            <div class="calendar__date calendar__item">18</div>
-            <div class="calendar__date calendar__item">19</div>
-            <div class="calendar__date calendar__item">20</div>
-            <div class="calendar__date calendar__item">21</div>
-            <div class="calendar__date calendar__item">22</div>
-            <div class="calendar__date calendar__item">23</div>
-            <div class="calendar__date calendar__item">24</div>
-            <div class="calendar__date calendar__item">25</div>
-            <div class="calendar__date calendar__item">26</div>
-            <div class="calendar__date calendar__item">27</div>
-            <div class="calendar__date calendar__item">28</div>
-            <div class="calendar__date calendar__item">29</div>
-            <div class="calendar__date calendar__item">30</div>
-        </div>
-    </div>
+
 </body>
+<article class="app">
+    <header class="app__header">Header</header>
+    <aside class="app__aside">
+        <ul class="app__items">
+            <li class="app__item">Item 1</li>
+            <li class="app__item">Item 2</li>
+            <li class="app__item">Item 3</li>
+            <li class="app__item">Item 4</li>
+        </ul>
+    </aside>
+    <main class="app__main">
+        <h2 class="app__title">Holy Grail Layout with CSS Grid</h2>
+        <p class="app__text">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt voluptatum, iure quam quo quibusdam quod est deleniti corrupti,
+            dolore distinctio similique exercitationem ullam minima ad sit, dolores esse voluptatibus natus assumenda. Cum
+            sapiente culpa mollitia optio atque natus voluptas soluta labore, unde quis iure doloremque consequatur vitae,
+            odit, praesentium perspiciatis? Molestiae, repellendus provident! Incidunt neque distinctio iure quibusdam dicta
+            aut, modi laudantium tempore architecto minima eum laborum quidem necessitatibus mollitia sit enim praesentium.
+            Odio dicta harum at, earum libero sit dolorum mollitia, eos culpa possimus tempore assumenda explicabo aspernatur.
+            Magni expedita libero quas, similique mollitia eligendi distinctio incidunt aut magnam.
+        </p>
+    </main>
+    <footer class="app__footer">Footer </footer>
+</article>
+
 </html>
