--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
 </body>
 <article class="app">
     <header class="app__header">Header</header>
+    <nav class="app__nav">Navigation</nav>
     <aside class="app__aside">
         <ul class="app__items">
-            <li class="app__item">Item 1</li>
-            <li class="app__item">Item 2</li>
-            <li class="app__item">Item 3</li>
-            <li class="app__item">Item 4</li>
+            <li class="app__item">Link 1</li>
+            <li class="app__item">Link 2</li>
+            <li class="app__item">Link 3</li>
+            <li class="app__item">Link 4</li>
         </ul>
     </aside>
     <main class="app__main">
@@ -32,6 +33,27 @@
             aut, modi laudantium tempore architecto minima eum laborum quidem necessitatibus mollitia sit enim praesentium.
             Odio dicta harum at, earum libero sit dolorum mollitia, eos culpa possimus tempore assumenda explicabo aspernatur.
             Magni expedita libero quas, similique mollitia eligendi distinctio incidunt aut magnam.
+
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi pariatur est autem nemo aperiam quaerat amet debitis, harum soluta necessitatibus itaque asperiores minus! Molestias totam repellendus autem ad explicabo aliquid?
+            Officiis possimus cumque velit voluptatibus labore natus corporis nulla odit quod earum odio ullam illum exercitationem ex quae enim molestiae sit dolorum pariatur, neque placeat nobis voluptatem? Officia, vitae! Esse!
+            Necessitatibus explicabo, ex doloremque possimus amet assumenda consectetur voluptate corporis eum, odit distinctio ab, itaque consequuntur nisi hic consequatur molestiae blanditiis. Nam ad nostrum esse illum velit sed sit reprehenderit?
+            Incidunt asperiores unde iste aliquid, eum amet suscipit minima vel perspiciatis dolore minus atque quae ipsam eos. Temporibus, consectetur, ipsum, quibusdam et nisi rerum eum minus sunt dolore pariatur minima.
+            Expedita harum ex enim rem illo officia excepturi a consectetur odio fuga error pariatur consequuntur voluptate, aperiam illum ut explicabo quo ullam laborum facere, vero quos? Illo alias tempore praesentium.
+            Enim, doloremque nam maxime delectus, nesciunt reprehenderit ratione iste consequatur deserunt consequuntur animi veniam magni repudiandae sed inventore vel dolores minima labore laboriosam odit! Natus nam laboriosam omnis mollitia ducimus!
+            Nihil asperiores nisi atque beatae quia et voluptatem itaque cumque! Nostrum voluptates possimus amet quo iure quis culpa. Quae magnam ea fuga tempora, commodi libero beatae quidem fugiat animi accusamus?
+            Natus blanditiis, et inventore non ex illo quae cumque repudiandae iure ratione dicta sapiente perspiciatis nam excepturi nobis fuga maiores vero reiciendis minus! Provident obcaecati, at dignissimos maxime aspernatur soluta.
+            Quas dolorem alias magni rerum ducimus modi quibusdam eligendi sapiente ab accusamus enim, itaque tempora distinctio voluptas error numquam nam? Magnam sapiente in corrupti ullam et voluptatem aut quo aspernatur!
+            Qui dignissimos distinctio ad, iure laudantium blanditiis eum vitae eligendi placeat illo nihil ipsam dolorem dicta perspiciatis harum, a temporibus? Veritatis sit architecto est quo maiores dolorum totam saepe sapiente.
+            Expedita porro ab cumque vero amet nulla, architecto quas magni doloremque itaque! Dicta ex officiis hic aliquam reprehenderit, magni unde. Libero sed natus porro illo repellendus in mollitia dicta quibusdam.
+            Corrupti quia minima, cumque vel, autem voluptate consequuntur a iste porro temporibus veritatis debitis illum quae enim nam omnis non unde quisquam doloremque possimus hic perferendis. Pariatur illum soluta assumenda!
+            Sapiente repudiandae tempore commodi eligendi! Voluptas inventore dignissimos aliquid modi, eius odit excepturi dolor voluptates ex nesciunt earum laborum, exercitationem dicta praesentium dolores. Voluptatem eos, architecto maxime veniam dicta delectus?
+            Cumque tempora nesciunt deserunt fuga animi vitae soluta cupiditate ea quae. Ex officiis maiores reiciendis, architecto velit provident repellendus, eum voluptatem assumenda numquam doloribus impedit praesentium quam, tenetur dicta temporibus?
+            Saepe sequi quasi doloremque! Maxime dolores, eius tenetur porro iusto consequuntur sapiente at magni quas nulla, officia assumenda quod itaque sint nam. Voluptatem inventore quas hic cum ab, officiis minima!
+            Excepturi accusamus mollitia molestias magni quod amet cumque aliquam. Nulla corrupti fugiat eius nihil officia aperiam ad architecto nisi ex qui neque eum in magni, tempore adipisci aspernatur, quisquam blanditiis.
+            Asperiores iure rerum nesciunt saepe ea! Ratione, sunt dignissimos iure consectetur in modi, quae iste reprehenderit eveniet quod enim tempore officia voluptates nostrum? Ipsa voluptate vero voluptatem expedita iste pariatur.
+            Veniam magni commodi maxime similique error voluptas corrupti obcaecati deserunt minus esse beatae voluptates laudantium aliquid reprehenderit explicabo, atque qui quos, neque non harum ipsam? Sit expedita itaque magnam accusamus.
+            Nostrum ullam, voluptate quidem quasi, animi quibusdam voluptas accusantium odio provident labore aperiam officiis quisquam, alias quod dolorum aspernatur iste earum consequatur dignissimos expedita dolor. Repellendus fugit provident corrupti officiis.
+            Animi cum totam sapiente obcaecati voluptates dolorem sunt consequatur, reiciendis accusantium porro nulla, id ad facere culpa quaerat, dolore error autem aliquid quae voluptatum velit? Voluptate fugit quas at corporis?
         </p>
     </main>
     <footer class="app__footer">Footer </footer>
